--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,28 @@
-<p>header works!</p>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <a class="navbar-brand dodo" href="#">Mrs Blessing Till Account</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse  my-2 my-lg-0" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto ">
+        
+    </ul>
+
+    <span class="nav-item active">
+        <a class="nav-link text-white" href="#">Till Account <span class="sr-only"></span></a>
+    </span>
+
+
+        <span class="nav-item">
+          <a class="nav-link  text-white" href="/vault">Vault</a>
+        </span>
+    
+        <span class="nav-item ">
+          <a class="nav-link text-white" href="/stanbic">Stanbic</a>
+        </span>
+     
+     
+    </div>
+  </nav>
